sample/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
  labels:
    app.kubernetes.io/appName: test
    app.kubernetes.io/instance: production
    app.kubernetes.io/kind: service
    app.kubernetes.io/serviceName: backend
    argocd.argoproj.io/instance: test
  name: REPLACE_WITH_NAME
spec:
  rules:
    - host: REPLACE_WITH_YOUR_DOMAIN
      http:
        paths:
          - backend:
              service:
                name: REPLACE_WITH_YOUR_BACKEND
                port:
                  number: REPLACE_WITH_YOUR_PORT
            path: /
            pathType: Prefix
